programs_backup_legacy/type_debug.log
warning: profiles for the non root package will be ignored, specify profiles at the workspace root:
package:   /mnt/c/Users/94447/Desktop/crypto/Monad/MemeHunter/programs/meme-hunter/Cargo.toml
workspace: /mnt/c/Users/94447/Desktop/crypto/Monad/MemeHunter/Cargo.toml
   Compiling meme-hunter v0.1.0 (/mnt/c/Users/94447/Desktop/crypto/Monad/MemeHunter/programs/meme-hunter)
warning: unused import: `program_error::ProgramError`
 --> programs/meme-hunter/src/lib.rs:8:5
  |
8 |     program_error::ProgramError,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused macro definition: `log`
  --> programs/meme-hunter/src/lib.rs:33:14
   |
33 | macro_rules! log {
   |              ^^^
   |
   = note: `#[warn(unused_macros)]` on by default

error[E0061]: this function takes 2 arguments but 1 argument was supplied
   --> programs/meme-hunter/src/lib.rs:39:15
    |
39  |     let res = entrypoint::deserialize(input);
    |               ^^^^^^^^^^^^^^^^^^^^^^^------- argument #2 of type `&mut [MaybeUninit<AccountInfo>]` is missing
    |
note: function defined here
   --> /home/sxlx/.cargo/registry/src/index.crates.io-6f17d22bba15001f/pinocchio-0.8.4/src/entrypoint/mod.rs:162:15
    |
162 | pub unsafe fn deserialize<'a, const MAX_ACCOUNTS: usize>(
    |               ^^^^^^^^^^^
help: provide the argument
    |
39  |     let res = entrypoint::deserialize(input, /* &mut [MaybeUninit<AccountInfo>] */);
    |                                      ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

error[E0308]: mismatched types
  --> programs/meme-hunter/src/lib.rs:40:9
   |
40 |     let () = res; // <--- Type deduction hack
   |         ^^   --- this expression has type `(&[u8; 32], usize, &[u8])`
   |         |
   |         expected `(&[u8; 32], usize, &[u8])`, found `()`
   |
   = note:  expected tuple `(&[u8; 32], usize, &[u8])`
           found unit type `()`

Some errors have detailed explanations: E0061, E0308.
For more information about an error, try `rustc --explain E0061`.
warning: `meme-hunter` (lib) generated 2 warnings
error: could not compile `meme-hunter` (lib) due to 2 previous errors; 2 warnings emitted
